@@ -1,6 +1,6 @@
 DIST xmlgraphics-commons-1.2-src.tar.gz 430083 RMD160 d04f39242d95f9fd3ef307d8c483bcec35bdc2dd SHA1 0c16d6bc28eee8419bd9cb1e4645f699bd10c9f3 SHA256 1588fe182e62d3f3cf7c2acb7d0989b7134b94c95580256e4fe1b9c5e3a38663
 DIST xmlgraphics-commons-1.3.1-src.tar.gz 751502 RMD160 1bd32470860a9fdcde2141a1238bd7694a614146 SHA1 6254909e109cdb4d005e958aa10adf17bcc4ecd1 SHA256 1dd2acfe892af34196d5365addd8e106dd355a2b4bead5f44feea4edcfc452b1
 EBUILD xmlgraphics-commons-1.2.ebuild 2240 RMD160 42fe8836e4fb7c8b20e113e4a8e4ca973cf88a7c SHA1 e9fd6ead94e66cc469ced1ec1d07d18a5451cda3 SHA256 87c005c3f154a151e50e43c92318bd123e81195061fb58b5cc69fa3314e737db
-EBUILD xmlgraphics-commons-1.3.1.ebuild 2148 RMD160 02b2615bb13bb135f27f39491065681dcf7551ef SHA1 2de057136bc032296fbad55037b27e1075b4165a SHA256 e60e5e5505e926788cce258196994b2e105b5d5e660b7d7da09a884436787abf
-MISC ChangeLog 2101 RMD160 ba96bce229cb965ced4d013674a2d5d84c9d8aa1 SHA1 2f0099909a04487f34cb146b3898e8e7390b4ab6 SHA256 5a062fc4cefa956e6b40a120d2e8366040ef28bd355420304e4f198c5fc23524
+EBUILD xmlgraphics-commons-1.3.1.ebuild 2143 RMD160 1a7d7ce3de9b839489f6eaf5920744a1c6cac0c4 SHA1 06f30c298e47fee5de8eb56713a2c9eaba26876e SHA256 7e2c67917094ed5cbdb55125443742990671b2014c6cffad5d55a42944e06986
+MISC ChangeLog 2265 RMD160 db01d9877abec1681637ac488199be1a4ef1c56b SHA1 a545d337db1792405d7e38fd4712a16c3fa633f8 SHA256 960589030a1e158ce18efd0276f24340ca7bb5d8647171594f78563cbb81a763
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
